tests/neg/i10552a.scala
transparent inline def foo[T]: Int = 10

def test =
  foo[List] // error
